[package]
name = "asn1_der"
version = "0.7.0"
edition = "2018"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = ["asn1", "asn1-der", "serialize", "deserialize", "no_panic"]
categories = ["encoding"]
description = "This crate provides an ASN.1-DER en-/decoder"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/asn1_der-rust"
readme = "README.md"
exclude = [".*", "test_unix.sh"]


[badges]
travis-ci = { repository = "KizzyCode/asn1_der-rust" }
appveyor = { repository = "KizzyCode/asn1_der-rust" }


[features]
default = ["native_types"]
native_types = []
no_std = []
no_panic = ["no-panic"]


[dependencies]
no-panic = { version = "^0.1", optional = true }


[dev-dependencies]
serde = { version = "^1.0", features = ["serde_derive"] }
serde_json = "^1.0"


[profile.release]
lto = "thin"
overflow-checks = true

[profile.bench]
overflow-checks = true