[package]
name = "asn1_der"
version = "0.7.6"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = ["asn1", "asn1-der", "serialize", "deserialize", "no_panic"]
categories = ["encoding"]
description = "This crate provides an ASN.1-DER en-/decoder"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/asn1_der-rust"
readme = "README.md"
exclude = [".*", "test_unix.sh"]


[badges]
appveyor = { repository = "KizzyCode/asn1_der-rust" }


[features]
default = ["std", "native_types"]
std = []
native_types = []
no_panic = ["no-panic"]


[dependencies]
no-panic = { version = "0.1", optional = true }


[dev-dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
