[package]
name = "asn1_der_derive"
version = "0.1.2"
authors = ["KizzyCode <development@kizzycode.de>"]
description = "This crate contains a procedural macro to implement `derive` for my `asn1_der` crate"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/asn1_der"
readme = "README.md"


[dependencies]
quote = "^1.0"
syn = "^1.0"


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true


[lib]
proc-macro = true